DB migration V21, refactoring ram and storage column from string to integer, dropdown for unit size
