# Game-Hub/game-Hub-be/game-Hub/src/main/java/gamehub/game_Hub/Response/UnitSizeResponse.java
@@ -1,0 +1,19 @@
+package gamehub.game_Hub.Response;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Data
+@Builder
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
+public class UnitSizeResponse {
+
+  private String unitSizeName;
+}
