# Game-Hub/game-Hub-fe/src/app/services/models/game-update-request.ts
@@ -8,15 +8,16 @@ export interface GameUpdateRequest {
   description: string;
   developer: string;
   discountPercent?: number | null;
+  gameUnitSize: string;
   genresIds: Array<number>;
   gpu: string;
   languageIds: Array<number>;
   platformIds: Array<number>;
   price: number;
   publisher: string;
-  ram: string;
+  ram: number;
   releaseYear: string;
-  storage: string;
+  storage: number;
   subtitleIds: Array<number>;
   title: string;
 }
